@@ -20744,3 +20744,56 @@ class DBProxy:
             # error
             self.dumpErrorMessage(_logger,methodName)
             return 0
+
+
+
+    # check event availability
+    def checkEventsAvailability(self, pandaID, jobsetID, jediTaskID):
+        comment = ' /* DBProxy.checkEventsAvailability */'
+        methodName = comment.split(' ')[-2].split('.')[-1]
+        methodName += " < PandaID={0} jobsetID={1} jediTaskID={2} >".format(pandaID, jobsetID, jediTaskID)
+        tmpLog = LogWrapper(_logger,methodName)
+        tmpLog.debug("start")
+        try:
+            sqlJ = "SELECT eventService FROM {0}.jobsActive4 WHERE PandaID=:PandaID ".format(panda_config.schemaJEDI)
+            # start transaction
+            self.conn.begin()
+            # get job to check if a jumbo job
+            isJumbo = False
+            varMap = {}
+            varMap[':PandaID']  = pandaID
+            self.cur.execute(sqlJ+comment, varMap)
+            res = self.cur.fetchone()
+            if res is not None:
+                eventService, = res
+                if eventService == EventServiceUtils.jumboJobFlagNumber:
+                    isJumbo = True
+            # get number of event ranges
+            sqlE = 'SELECT COUNT(*) '
+            sqlE += "FROM {0}.JEDI_Events ".format(panda_config.schemaJEDI)
+            sqlE += "WHERE jediTaskID=:jediTaskID AND status=:eventStatus AND attemptNr>:minAttemptNr "
+            varMap = {}
+            varMap[':eventStatus']  = EventServiceUtils.ST_ready
+            varMap[':minAttemptNr'] = 0
+            varMap[':jediTaskID'] = jediTaskID
+            if not isJumbo:
+                varMap[':jobsetID'] = jobsetID
+                sqlE += "AND PandaID=:jobsetID "    
+            self.cur.execute(sqlE+comment, varMap)
+            res = self.cur.fetchone()
+            if res is not None:
+                nEvents, = res
+            else:
+                nEvents = 0
+            # commit
+            if not self._commit():
+                raise RuntimeError, 'Commit error'
+            tmpLog.debug("has {0} event ranges".format(nEvents))
+            return nEvents
+        except:
+            # roll back
+            self._rollback()
+            # error
+            self.dumpErrorMessage(_logger,methodName)
+            return None
+
