@@ -1,5 +1,8 @@
 Release Notes
 
+* 1/18/2018
+  * added checkEventsAvailability
+
 * 1/15/2018
   * added nStandby
 
